updated search
now includes albums and users